[tmux] open new window with current $PWD

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,10 @@
 set -g prefix2 C-s                        # GNU-Screen compatible prefix
 bind C-s send-prefix -2
 set-window-option -g xterm-keys on
+
+#use $PWD for newly created window
+bind c new-window -c "#{pane_current_path}"
+
 # Split vertically using the pipe character
 bind \ split-window -h
 # Split horizontally using the dash
